monitoria/mac323/1-3-35/special/Lucas-Moreira-Santos_181989_assignsubmission_file_Tarefa1/debug_log.txt
./RandomQueue.java:15: error: reference to Vector is ambiguous
  private Vector<Item> items;
          ^
  both class java.util.Vector in java.util and class edu.princeton.cs.algs4.Vector in edu.princeton.cs.algs4 match
./RandomQueue.java:18: error: reference to Vector is ambiguous
    this.items = new Vector<Item>(10);
                     ^
  both class java.util.Vector in java.util and class edu.princeton.cs.algs4.Vector in edu.princeton.cs.algs4 match
2 errors
